--- a/trunk/099/config/boats.cfg
+++ b/trunk/099/config/boats.cfg
@@ -16,7 +16,7 @@
 # }
 #
 # Explanation:
-# ObjType should be >= 0x4000.
+# ObjType should be >= 0x11000.
 # All the x,y tile distance offsets are from the ship's mast.
 # As normal on the map, positive X is east, positive Y is south.
 # It doesn't matter what 'facing' of the boat this is for,
@@ -24,13 +24,13 @@
 # parts south of the mast are defined with positive Y values, and vice versa.
 
 #######################################################
-###          Small Boat - 0x4000 to 0x4003          ###
+###          Small Boat - 0x11000 to 0x11003          ###
 #######################################################
 
 # Small Boat Facing North
 Boat
 {
-    ObjType                     0x4000
+    ObjType                     0x11000
     TillerMan                   0x3e4e 1 4
     PortGangplankExtended       0x3ed5 -2 0
     PortGangplankRetracted      0x3eb1 -2 0
@@ -42,7 +42,7 @@ Boat
 # Small Boat Facing East
 Boat
 {
-    ObjType                     0x4001
+    ObjType                     0x11001
     TillerMan                   0x3e55 -4 0
     PortGangplankExtended       0x3e89 0 -2
     PortGangplankRetracted      0x3e8a 0 -2
@@ -54,7 +54,7 @@ Boat
 # Small Boat Facing South
 Boat
 {
-    ObjType                     0x4002
+    ObjType                     0x11002
     TillerMan                   0x3e4b 0 -4
     PortGangplankExtended       0x3ed4 +2 0
     PortGangplankRetracted      0x3eb2 +2 0
@@ -66,7 +66,7 @@ Boat
 # Small Boat Facing West
 Boat
 {
-    ObjType                     0x4003
+    ObjType                     0x11003
     TillerMan                   0x3e50 +4 0
     PortGangplankExtended       0x3e84 0 2
     PortGangplankRetracted      0x3e85 0 2
@@ -76,13 +76,13 @@ Boat
 }
 
 #######################################################
-###       Small Dragon Boat - 0x4004 to 0x4007      ###
+###       Small Dragon Boat - 0x11004 to 0x11007      ###
 #######################################################
 
 # Small Dragon Boat Facing North
 Boat
 {
-    ObjType                     0x4004
+    ObjType                     0x11004
     TillerMan                   0x3e4e 1 4
     PortGangplankExtended       0x3ed5 -2 0
     PortGangplankRetracted      0x3eb1 -2 0
@@ -94,7 +94,7 @@ Boat
 # Small Dragon Boat Facing East
 Boat
 {
-    ObjType                     0x4005
+    ObjType                     0x11005
     TillerMan                   0x3e55 -4 0
     PortGangplankExtended       0x3e89 0 -2
     PortGangplankRetracted      0x3e8a 0 -2
@@ -106,7 +106,7 @@ Boat
 # Small Dragon Boat Facing South
 Boat
 {
-    ObjType                     0x4006
+    ObjType                     0x11006
     TillerMan                   0x3e4b 0 -4
     PortGangplankExtended       0x3ed4 +2 0
     PortGangplankRetracted      0x3eb2 +2 0
@@ -118,7 +118,7 @@ Boat
 # Small Dragon Boat Facing West
 Boat
 {
-    ObjType                     0x4007
+    ObjType                     0x11007
     TillerMan                   0x3e50 +4 0
     PortGangplankExtended       0x3e84 0 2
     PortGangplankRetracted      0x3e85 0 2
@@ -128,13 +128,13 @@ Boat
 }
 
 #######################################################
-###          Medium Boat - 0x4008 to 0x400B         ###
+###          Medium Boat - 0x11008 to 0x1100B         ###
 #######################################################
 
 # Medium Boat Facing North
 Boat
 {
-    ObjType                     0x4008
+    ObjType                     0x11008
     TillerMan                   0x3e4e 1 5
     PortGangplankExtended       0x3ed5 -2 0
     PortGangplankRetracted      0x3eb1 -2 0
@@ -146,7 +146,7 @@ Boat
 # Medium Boat Facing East
 Boat
 {
-    ObjType                     0x4009
+    ObjType                     0x11009
     TillerMan                   0x3e55 -5 0
     PortGangplankExtended       0x3e89 0 -2
     PortGangplankRetracted      0x3e8a 0 -2
@@ -158,7 +158,7 @@ Boat
 # Medium Boat Facing South
 Boat
 {
-    ObjType                     0x400A
+    ObjType                     0x1100A
     TillerMan                   0x3e4b 0 -5
     PortGangplankExtended       0x3ed4 +2 0
     PortGangplankRetracted      0x3eb2 +2 0
@@ -170,7 +170,7 @@ Boat
 # Medium Boat Facing West
 Boat
 {
-    ObjType                     0x400B
+    ObjType                     0x1100B
     TillerMan                   0x3e50 +5 0
     PortGangplankExtended       0x3e84 0 2
     PortGangplankRetracted      0x3e85 0 2
@@ -180,13 +180,13 @@ Boat
 }
 
 #######################################################
-###      Medium Dragon Boat - 0x400C to 0x400F      ###
+###      Medium Dragon Boat - 0x1100C to 0x1100F      ###
 #######################################################
 
 # Medium Dragon Boat Facing North
 Boat
 {
-    ObjType                     0x400C
+    ObjType                     0x1100C
     TillerMan                   0x3e4e 1 5
     PortGangplankExtended       0x3ed5 -2 0
     PortGangplankRetracted      0x3eb1 -2 0
@@ -198,7 +198,7 @@ Boat
 # Medium Dragon Boat Facing East
 Boat
 {
-    ObjType                     0x400D
+    ObjType                     0x1100D
     TillerMan                   0x3e55 -5 0
     PortGangplankExtended       0x3e89 0 -2
     PortGangplankRetracted      0x3e8a 0 -2
@@ -210,7 +210,7 @@ Boat
 # Medium Dragon Boat Facing South
 Boat
 {
-    ObjType                     0x400E
+    ObjType                     0x1100E
     TillerMan                   0x3e4b 0 -5
     PortGangplankExtended       0x3ed4 +2 0
     PortGangplankRetracted      0x3eb2 +2 0
@@ -222,7 +222,7 @@ Boat
 # Medium Dragon Boat Facing West
 Boat
 {
-    ObjType                     0x400F
+    ObjType                     0x1100F
     TillerMan                   0x3e50 +5 0
     PortGangplankExtended       0x3e84 0 2
     PortGangplankRetracted      0x3e85 0 2
@@ -232,13 +232,13 @@ Boat
 }
 
 #######################################################
-###          Long Boat - 0x4010 to 0x4013           ###
+###          Long Boat - 0x11010 to 0x11013           ###
 #######################################################
 
 # Long Boat Facing North
 Boat
 {
-    ObjType                     0x4010
+    ObjType                     0x11010
     TillerMan                   0x3e4e 1 5
     PortGangplankExtended       0x3ed5 -2 -1
     PortGangplankRetracted      0x3eb1 -2 -1
@@ -250,7 +250,7 @@ Boat
 # Long Boat Facing East
 Boat
 {
-    ObjType                     0x4011
+    ObjType                     0x11011
     TillerMan                   0x3e55 -5 0
     PortGangplankExtended       0x3e89 1 -2
     PortGangplankRetracted      0x3e8a 1 -2
@@ -262,7 +262,7 @@ Boat
 # Long Boat Facing South
 Boat
 {
-    ObjType                     0x4012
+    ObjType                     0x11012
     TillerMan                   0x3e4b 0 -5
     PortGangplankExtended       0x3ed4 +2 1
     PortGangplankRetracted      0x3eb2 +2 1
@@ -274,7 +274,7 @@ Boat
 # Long Boat Facing West
 Boat
 {
-    ObjType                     0x4013
+    ObjType                     0x11013
     TillerMan                   0x3e50 +5 0
     PortGangplankExtended       0x3e84 -1 2
     PortGangplankRetracted      0x3e85 -1 2
@@ -284,13 +284,13 @@ Boat
 }
 
 #######################################################
-###       Long Dragon Boat - 0x4014 to 0x4017       ###
+###       Long Dragon Boat - 0x11014 to 0x11017       ###
 #######################################################
 
 # Long Dragon Boat Facing North
 Boat
 {
-    ObjType                     0x4014
+    ObjType                     0x11014
     TillerMan                   0x3e4e 1 5
     PortGangplankExtended       0x3ed5 -2 -1
     PortGangplankRetracted      0x3eb1 -2 -1
@@ -302,7 +302,7 @@ Boat
 # Long Dragon Boat Facing East
 Boat
 {
-    ObjType                     0x4015
+    ObjType                     0x11015
     TillerMan                   0x3e55 -5 0
     PortGangplankExtended       0x3e89 1 -2
     PortGangplankRetracted      0x3e8a 1 -2
@@ -314,7 +314,7 @@ Boat
 # Long Dragon Boat Facing South
 Boat
 {
-    ObjType                     0x4016
+    ObjType                     0x11016
     TillerMan                   0x3e4b 0 -5
     PortGangplankExtended       0x3ed4 +2 1
     PortGangplankRetracted      0x3eb2 +2 1
@@ -326,11 +326,60 @@ Boat
 # Long Dragon Boat Facing West
 Boat
 {
-    ObjType                     0x4017
+    ObjType                     0x11017
     TillerMan                   0x3e50 +5 0
     PortGangplankExtended       0x3e84 -1 2
     PortGangplankRetracted      0x3e85 -1 2
     StarboardGangplankExtended  0x3e89 -1 -2
     StarboardGangplankRetracted 0x3e8a -1 -2
-    Hold                        0x3e93 -5 0
+    Hold                        0x5bf7 -9 0
+}
+
+#######################################################
+###       Britannian Ship  - 0x11040 to 0x11043       ###
+#######################################################
+
+# Britannian Ship Facing East
+Boat
+{
+    ObjType                     0x11040
+    TillerMan                   0x5c0c  0 3
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c2d  0 9
+}
+
+Boat
+{
+    ObjType                     0x11041
+    TillerMan                   0x5bd6 -3 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5bf7 -9 0
+}
+
+Boat
+{
+    ObjType                     0x11042
+    TillerMan                   0x5c42  0 -3
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c63  0 -9
+}
+
+Boat
+{
+    ObjType                     0x11043
+    TillerMan                   0x5c78  3 0
+    PortGangplankExtended       0x3e84 -1 2
+    PortGangplankRetracted      0x3e85 -1 2
+    StarboardGangplankExtended  0x3e89 -1 -2
+    StarboardGangplankRetracted 0x3e8a -1 -2
+    Hold                        0x5c99  9 0
 }
