--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -623,7 +623,7 @@ Equipment shadowarcher
 	Equip	0x7066 0x455    // chainmail gloves
 	Equip	0x13BF 0x455    // a chainmail tunic
 	Equip	0xE75           // a backpack
-	Equip	0xF021 0x59B    // a ship
+	Equip	0x1F021 0x59B    // a ship
 }
 
 Equipment jeffery
