--- a/trunk/099/config/landtiles.cfg
+++ b/trunk/099/config/landtiles.cfg
@@ -1,6 +1,6 @@
 landtile 0x0
 {
-    Name UNUSED
+    Name ED
     UoFlags 0x00000000
     MoveLand 1
     BlockSight 1
@@ -2724,6 +2724,50 @@ landtile 0x12c
 landtile 0x12d
 {
     Name sand
+    UoFlags 0x00000000
+    MoveLand 1
+    BlockSight 1
+    OverFlight 0
+    AllowDropOn 1
+    Gradual 1
+}
+
+landtile 0x12e
+{
+    Name snow
+    UoFlags 0x00000000
+    MoveLand 1
+    BlockSight 1
+    OverFlight 0
+    AllowDropOn 1
+    Gradual 1
+}
+
+landtile 0x12f
+{
+    Name snow
+    UoFlags 0x00000000
+    MoveLand 1
+    BlockSight 1
+    OverFlight 0
+    AllowDropOn 1
+    Gradual 1
+}
+
+landtile 0x130
+{
+    Name snow
+    UoFlags 0x00000000
+    MoveLand 1
+    BlockSight 1
+    OverFlight 0
+    AllowDropOn 1
+    Gradual 1
+}
+
+landtile 0x131
+{
+    Name snow
     UoFlags 0x00000000
     MoveLand 1
     BlockSight 1
