--- a/trunk/099/pkg/skills/craftingskills/alchemy/alchemy.cfg
+++ b/trunk/099/pkg/skills/craftingskills/alchemy/alchemy.cfg
@@ -770,9 +770,32 @@ itemtype 38
 	failnoise 	0x4f
 }
 
+//black pearl + bone + ruby
 itemtype 39
 {
 	itemtype		39
+	name			an essence of frost potion
+	book_name_1	Essence of
+	book_name_2	Frost Potion
+	skill		80
+	graphic		0xefb
+	product		0x709d
+	reagent		0x0F11	1
+	reagent		0xf7a	5
+	reagent		0xf7e	2
+	needmortar	1
+	needburner	1
+	consume_bottle	1
+	return_bottle	0
+	make_in_keg	0
+	worknoise		0x0243
+	makenoise 	0x241
+	failnoise 	0x4f
+}
+
+itemtype 40
+{
+	itemtype		40
 	name 		Sorin's Protection from Paralyzation Potion
 	book_name_1	Sorin's Prot. from
 	book_name_2	Para. Potion
