--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
@@ -1,19 +1,9 @@
-Item 0X0FBB
+Item 0x0FBB
 {
-    Name           tongs
-    Desc	   Tongs
-    vendorbuysfor   12
-    vendorsellsfor  30
-    Script          make_blacksmith_items
-}
-
-Item 0X13E3
-{
-    Name            smithshammer
-    Desc	    Smith's Hammer
-    vendorbuysfor   12
-    vendorsellsfor  30
-    Script          make_blacksmith_items
+	Name				tongs
+	Script			make_blacksmith_items
+	vendorbuysfor		12
+	vendorsellsfor		30
 }
 
 Item 0x70d0
