--- a/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
@@ -5,7 +5,7 @@
 carpentry 0x0a2a
 { 
 	Name			a stool
-	material		2
+	material		10
 	skill		30
 	time			3
 }
@@ -13,7 +13,7 @@ carpentry 0x0a2a
 carpentry 0x0b2c
 {
 	Name			a bench
-	material		3
+	material		15
 	skill		40
 	time			3
 }
@@ -21,7 +21,7 @@ carpentry 0x0b2c
 carpentry 0x0b2f
 { 
 	Name			a wooden chair
-	material		3
+	material		20
 	skill		40
 	time			3
 }
@@ -29,7 +29,7 @@ carpentry 0x0b2f
 carpentry 0x0b5a
 { 
 	Name			a chair
-	material		3
+	material		20
 	skill		40
 	time			3
 }
@@ -37,7 +37,7 @@ carpentry 0x0b5a
 carpentry 0x0b56
 { 
 	Name			a chair
-	material		3
+	material		20
 	skill		50
 	time			3
 }
@@ -45,7 +45,7 @@ carpentry 0x0b56
 carpentry 0x0b53
 { 
 	Name			a chair
-	material		3
+	material		20
 	skill		50
 	time			3
 }
@@ -53,7 +53,7 @@ carpentry 0x0b53
 carpentry 0x0b32
 { 
 	Name			a throne
-	material		4
+	material		25
 	skill		70
 	time			4
 }
@@ -68,7 +68,8 @@ carpentry 0x0b32
 carpentry 0x0a4f
 { 
 	Name			an armoire
-	material		8
+	material		50
+	skill		95
 	lockable		1
 	time			6
 }
@@ -76,7 +77,7 @@ carpentry 0x0a4f
 carpentry 0x0a53
 { 
 	Name			an armoire
-	material		8
+	material		50
 	skill		95
 	lockable		1
 	time			6
@@ -85,7 +86,7 @@ carpentry 0x0a53
 carpentry 0x0a51
 { 
 	Name			a cherry armoire
-	material		8
+	material		50
 	skill		95
 	lockable		1
 	time			6
@@ -94,7 +95,7 @@ carpentry 0x0a51
 carpentry 0x0a4d
 { 
 	Name			a cherry armoire
-	material		8
+	material		50
 	skill		95
 	lockable		1
 	time			6
@@ -103,7 +104,7 @@ carpentry 0x0a4d
 capentry 0x0A2C
 {
 	Name			a chest of drawers
-	material		6
+	material		40
 	skill		75
 	lockable		1
 	time			5
@@ -112,7 +113,7 @@ capentry 0x0A2C
 capentry 0x0A34
 {
 	Name			a chest of drawers
-	material		6
+	material		40
 	skill		75
 	lockable		1
 	time			5
@@ -121,7 +122,7 @@ capentry 0x0A34
 Carpentry 0x0a30
 {
 	Name			a chest of drawers
-	material		6
+	material		40
 	skill		75
 	lockable		1
 	time			5
@@ -130,7 +131,7 @@ Carpentry 0x0a30
 Carpentry 0x0a38
 {
 	Name			a chest of drawers
-	material		6
+	material		40
 	skill		75
 	lockable		1
 	time			5
@@ -139,7 +140,7 @@ Carpentry 0x0a38
 carpentry 0x0a9b
 { 
 	Name			a bookshelf
-	material		5
+	material		30
 	skill		65
 	time			5
 }
@@ -147,7 +148,7 @@ carpentry 0x0a9b
 carpentry 0x0a9c
 { 
 	Name			a bookshelf
-	material		5
+	material		30
 	skill		65
 	time			5
 }
@@ -155,7 +156,7 @@ carpentry 0x0a9c
 carpentry 0x0a9d
 { 
 	Name			a bookshelf
-	material		5
+	material		30
 	skill		65
 	time			5
 }
@@ -163,7 +164,7 @@ carpentry 0x0a9d
 carpentry 0x0a9e
 { 
 	Name			a bookshelf
-	material		5
+	material		30
 	skill		65
 	time			5
 }
@@ -171,7 +172,7 @@ carpentry 0x0a9e
 carpentry 0x28A0
 { 
 	Name			a winerack
-	material		5
+	material		30
 	skill		65
 	time			5
 }
@@ -186,7 +187,7 @@ carpentry 0x28A0
 carpentry 0x09aa
 { 
 	Name			a wooden box
-	material		2
+	material		10
 	skill		90
 	lockable		1
 	time			5
@@ -195,7 +196,7 @@ carpentry 0x09aa
 carpentry 0x0e7d
 { 
 	Name			a wooden box
-	material		2
+	material		10
 	skill		90
 	lockable		1
 	time			5
@@ -204,7 +205,7 @@ carpentry 0x0e7d
 carpentry  0x0e42
 { 
 	Name			a wooden chest
-	material		4
+	material		25
 	skill		70
 	lockable		1
 	time			4
@@ -213,7 +214,7 @@ carpentry  0x0e42
 carpentry  0x0e43
 { 
 	Name			a wooden chest
-	material		4
+	material		25
 	skill		70
 	lockable		1
 	time			4
@@ -222,7 +223,7 @@ carpentry  0x0e43
 carpentry 0x09a9
 { 
 	Name			a small crate
-	material		2
+	material		10
 	skill		40
 	lockable		1
 	time			3
@@ -231,7 +232,7 @@ carpentry 0x09a9
 carpentry 0x0e7e
 { 
 	Name			a small crate
-	material		2
+	material		10
 	skill		40
 	lockable		1
 	time			3
@@ -240,7 +241,7 @@ carpentry 0x0e7e
 carpentry 0x0e3f
 { 
 	Name			a medium crate
-	material		2
+	material		15
 	skill		50
 	lockable		1
 	time			3
@@ -249,7 +250,7 @@ carpentry 0x0e3f
 carpentry 0x0e3e
 { 
 	Name			a medium crate
-	material		2
+	material		15
 	skill		50
 	lockable		1
 	time			3
@@ -258,7 +259,7 @@ carpentry 0x0e3e
 carpentry 0x0e3c
 { 
 	Name			a large crate
-	material		3
+	material		20
 	skill		60
 	lockable		1
 	time			3
@@ -267,7 +268,7 @@ carpentry 0x0e3c
 carpentry 0x0e3d
 { 
 	Name			a large crate
-	material		3
+	material		20
 	skill		60
 	lockable		1
 	time			3
@@ -276,7 +277,7 @@ carpentry 0x0e3d
 carpentry 0X0e77
 { 
 	Name			a barrel
-	material		3
+	material		20
 	skill		50
 	time			3
 }
@@ -291,7 +292,7 @@ carpentry 0X0e77
 carpentry 0x1b7a
 { 
 	Name			a wooden shield
-	material		4
+	material		25
 	skill		45
 	has_quality	1
 	time			4
@@ -300,7 +301,7 @@ carpentry 0x1b7a
 carpentry 0x1b78
 { 
 	Name			a wooden kite shield
-	material		7
+	material		45
 	skill		60
 	has_quality	1
 	time			6
@@ -316,7 +317,7 @@ carpentry 0x1b78
 carpentry 0X1940
 { 
 	Name			a keg
-	material		2
+	material		10
 	skill		45
 	time			3
 }
@@ -324,7 +325,7 @@ carpentry 0X1940
 carpentry 0x0E7F
 { 
 	Name			a keg
-	material		2
+	material		10
 	skill		45
 	time			3
 }
@@ -332,7 +333,7 @@ carpentry 0x0E7F
 carpentry 0X104e
 { 
 	Name			a clock frame
-	material		2
+	material		10
 	skill		40
 	time			3
 }
@@ -365,7 +366,7 @@ carpentry 0X1f14
 carpentry 0x2866
 { 
 	Name			broom
-	material		2
+	material		10
 	skill		70
 	stackable		0
 	time			3
@@ -381,7 +382,7 @@ carpentry 0x2866
 carpentry 0x0b34
 { 
 	Name			a small table
-	material		3
+	material		15
 	skill		65
 	time			3
 }
@@ -389,7 +390,7 @@ carpentry 0x0b34
 capentry 0x0b40
 {
 	Name			a counter
-	material		5
+	material		30
 	skill		80
 	time			4
 }
@@ -397,7 +398,7 @@ capentry 0x0b40
 capentry 0x0b7d
 {
 	Name			a table
-	material		6
+	material		40
 	skill		85
 	time			5
 }
@@ -405,7 +406,7 @@ capentry 0x0b7d
 capentry 0x0b90
 {
 	Name			a table
-	material		6
+	material		40
 	skill		85
 	time			5
 }
@@ -413,7 +414,7 @@ capentry 0x0b90
 capentry 0x0b7c
 {
 	Name			a table
-	material		6
+	material		40
 	skill		85
 	time			5
 }
@@ -421,7 +422,7 @@ capentry 0x0b7c
 capentry 0x0b8f
 {
 	Name			a table
-	material		6
+	material		40
 	skill		85
 	time			5
 }
@@ -429,10 +430,13 @@ capentry 0x0b8f
 carpentry 0x0b4b
 { 
 	Name			a writing desk
-	material		5
+	material		30
 	skill		70
 	time			5
 }
+
+
+
 
 ///////////////////
 //  house add-ons
@@ -441,7 +445,7 @@ carpentry 0x0b4b
 capentry 0xB000
 {
 	Name			anvil deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -449,7 +453,7 @@ capentry 0xB000
 capentry 0xB001
 {
 	Name			small forge deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -457,7 +461,7 @@ capentry 0xB001
 capentry 0xB002
 {
 	Name			training dummy deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -465,7 +469,7 @@ capentry 0xB002
 capentry 0xB003
 {
 	Name			pickpocket dip deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -473,7 +477,7 @@ capentry 0xB003
 capentry 0xB004
 {
 	Name			spinning wheel deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -481,7 +485,7 @@ capentry 0xB004
 capentry 0xB005
 {
 	Name			bed deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -489,7 +493,7 @@ capentry 0xB005
 capentry 0xB006
 {
 	Name			loom deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -497,7 +501,7 @@ capentry 0xB006
 capentry 0xB007
 {
 	Name			mill deed
-	material		16
+	material		100
 	skill		90
 	time			6
 }
@@ -521,7 +525,7 @@ carpentry 0x13b3
 carpentry 0x0e81
 { 
 	Name			shepherd's crook
-	material		3
+	material		20
 	skill		70
 	has_quality	1
 	time			5
@@ -530,7 +534,7 @@ carpentry 0x0e81
 carpentry 0X0e8a
 { 
 	Name			a quarterstaff
-	material		6
+	material		40
 	skill		90
 	has_quality	1
 	time			7
@@ -539,7 +543,7 @@ carpentry 0X0e8a
 carpentry 0x13f9
 { 
 	Name			a gnarled staff
-	material		5
+	material		30
 	skill		70
 	has_quality	1
 	time			5
@@ -548,7 +552,7 @@ carpentry 0x13f9
 carpentry 0x7065
 {
 	Name			a mage staff
-	material		5
+	material		30
 	skill		70
 	has_quality	1
 	time			5
@@ -557,7 +561,7 @@ carpentry 0x7065
 carpentry 0x0df0
 { 
 	Name			a black staff
-	material		5
+	material		30
 	skill		70
 	has_quality	1
 	time			5
@@ -566,7 +570,7 @@ carpentry 0x0df0
 carpentry 0x7068
 { 
 	Name			a druid staff
-	material		5
+	material		30
 	skill		80
 	has_quality	1
 	time			5
@@ -575,7 +579,7 @@ carpentry 0x7068
 carpentry 0x706a
 { 
 	Name			a lich staff
-	material		5
+	material		30
 	skill		80
 	has_quality	1
 	time			5
@@ -598,7 +602,7 @@ carpentry 0x7067
 carpentry 0x0e9d
 {
 	Name			a tamborine
-	material		2
+	material		10
 	skill		40
 	time			4
 }
@@ -606,7 +610,7 @@ carpentry 0x0e9d
 carpentry 0x0e9e
 {
 	Name			a tamborine
-	material		2
+	material		10
 	skill		50
 	time			4
 }
@@ -614,7 +618,7 @@ carpentry 0x0e9e
 carpentry 0x0eb3
 {
 	Name			a lute
-	material		3
+	material		15
 	skill		60
 	time			4
 }
@@ -622,7 +626,7 @@ carpentry 0x0eb3
 carpentry 0x0e9c
 {
 	Name			a drum
-	material		3
+	material		15
 	skill		70
 	time			4
 }
@@ -630,7 +634,7 @@ carpentry 0x0e9c
 carpentry 0x0eb2
 {
 	Name			a harp
-	material		3
+	material		20
 	skill		80
 	time			4
 }
@@ -638,7 +642,7 @@ carpentry 0x0eb2
 carpentry 0x0eb1
 {
 	Name			a standing harp
-	material		5
+	material		30
 	skill		90
 	time			5
 }
@@ -671,7 +675,7 @@ Element 0x1BD4
 Element 0x13B2
 {
 	Name			a bow
-	Material		3
+	Material		15
 	skill		40
 	has_quality	1
 	time			5
@@ -680,7 +684,7 @@ Element 0x13B2
 Element 0x0f4f
 {
 	Name			a crossbow
-	Material		3
+	Material		17
 	skill		60
 	has_quality	1
 	time			6
@@ -689,7 +693,7 @@ Element 0x0f4f
 Element 0x13fd
 {
 	Name			a heavy crossbow
-	Material		4
+	Material		20
 	skill		80
 	has_quality	1
 	time			7
