--- a/trunk/099/pkg/skills/craftingskills/cooking/cooking.cfg
+++ b/trunk/099/pkg/skills/craftingskills/cooking/cooking.cfg
@@ -34,7 +34,7 @@ recipe 1
 {
 	menu_name			cooked rib
 	show_in_cookbook	1
-	product_objtype		0x09f2
+	product_objtype	0x09f2
 	product_amount		1
 	product_name
 	product_graphic
@@ -42,7 +42,7 @@ recipe 1
 	skill			20
 	cooking_method		3
 	ingredient		ITEM_RAW_RIB	1
-	ingredient_list		a raw rib
+	ingredient_list	a raw rib
 	extra_returns
 }
 
@@ -597,7 +597,7 @@ recipe 32
 	skill			30
 	cooking_method		2
 	ingredient		ITEM_BALL_OF_DOUGH	1
-	ingredient_list		ball of dough
+	ingredient_list	ball of dough
 	extra_returns
 }
 
@@ -614,7 +614,7 @@ recipe 33
 	skill			40
 	cooking_method		2
 	ingredient		ITEM_BALL_OF_DOUGH	1
-	ingredient_list		ball of dough
+	ingredient_list	ball of dough
 	extra_returns
 }
 
@@ -623,7 +623,7 @@ recipe 34
 {
 	menu_name			garlic bread
 	show_in_cookbook	1
-	product_objtype		0xc911
+	product_objtype	0xc911
 	product_amount		1
 	product_name
 	product_graphic
@@ -632,7 +632,7 @@ recipe 34
 	cooking_method		2
 	ingredient		ITEM_BALL_OF_DOUGH	1
 	ingredient		ITEM_GARLIC		1
-	ingredient_list		ball of dough and garlic
+	ingredient_list	ball of dough and garlic
 	extra_returns
 }
 
@@ -641,7 +641,7 @@ recipe 35
 {
 	menu_name			muffins
 	show_in_cookbook	1
-	product_objtype		0x09ea
+	product_objtype	0x09ea
 	product_amount		3
 	product_name
 	product_graphic
@@ -649,7 +649,7 @@ recipe 35
 	skill			30
 	cooking_method		2
 	ingredient		ITEM_BALL_OF_DOUGH	1
-	ingredient_list		ball of dough
+	ingredient_list	ball of dough
 	extra_returns
 }
 
@@ -658,7 +658,7 @@ recipe 36
 {
 	menu_name			cornmuffins
 	show_in_cookbook	1
-	product_objtype		0xc910
+	product_objtype	0xc910
 	product_amount		2
 	product_name
 	product_graphic
@@ -667,7 +667,7 @@ recipe 36
 	cooking_method		2
 	ingredient		ITEM_CORNMEAL		1
 	ingredient		ITEM_GENERAL_MILK	1
-	ingredient_list		cornmeal and milk
+	ingredient_list	cornmeal and milk
 	extra_returns
 }
 
@@ -676,7 +676,7 @@ recipe 37
 {
 	menu_name			cheese pizza
 	show_in_cookbook	1
-	product_objtype		0xc900
+	product_objtype	0xc900
 	product_amount		1
 	product_name
 	product_graphic
@@ -685,7 +685,7 @@ recipe 37
 	cooking_method		2
 	ingredient		ITEM_PIZZA_CRUST	1
 	ingredient		ITEM_GENERAL_CHEESE	1
-	ingredient_list		a pizza crust and a wedge of cheese
+	ingredient_list	a pizza crust and a wedge of cheese
 	extra_returns
 }
 
@@ -694,7 +694,7 @@ recipe 38
 {
 	menu_name			vegetarian pizza
 	show_in_cookbook	1
-	product_objtype		0xc902
+	product_objtype	0xc902
 	product_amount		1
 	product_name
 	product_graphic
@@ -704,7 +704,7 @@ recipe 38
 	ingredient		ITEM_PIZZA_CRUST	1
 	ingredient		ITEM_GENERAL_CHEESE	1
 	ingredient		ITEM_LETTUCE		1
-	ingredient_list		a pizza crust, a wedge of cheese and lettuce
+	ingredient_list	a pizza crust, a wedge of cheese and lettuce
 	extra_returns
 }
 
@@ -713,7 +713,7 @@ recipe 39
 {
 	menu_name			onion pizza
 	show_in_cookbook	1
-	product_objtype		0xc903
+	product_objtype	0xc903
 	product_amount		1
 	product_name
 	product_graphic
@@ -723,7 +723,7 @@ recipe 39
 	ingredient		ITEM_PIZZA_CRUST	1
 	ingredient		ITEM_GENERAL_CHEESE	1
 	ingredient		ITEM_ONION		1
-	ingredient_list		a pizza crust, a wedge of cheese and an onion
+	ingredient_list	a pizza crust, a wedge of cheese and an onion
 	extra_returns
 }
 
@@ -732,7 +732,7 @@ recipe 40
 {
 	menu_name			sausage pizza
 	show_in_cookbook	1
-	product_objtype		0xc901
+	product_objtype	0xc901
 	product_amount		1
 	product_name
 	product_graphic
@@ -742,7 +742,7 @@ recipe 40
 	ingredient		ITEM_PIZZA_CRUST	1
 	ingredient		ITEM_GENERAL_CHEESE	1
 	ingredient		ITEM_RAW_SAUSAGE	1
-	ingredient_list		a pizza crust, a wedge of cheese and raw sausage
+	ingredient_list	a pizza crust, a wedge of cheese and raw sausage
 	extra_returns
 }
 
@@ -751,7 +751,7 @@ recipe 41
 {
 	menu_name			plate of cookies
 	show_in_cookbook	3
-	product_objtype		0x160c
+	product_objtype	0x160c
 	product_amount		1
 	product_name
 	product_graphic
@@ -759,7 +759,7 @@ recipe 41
 	skill			50
 	cooking_method		2
 	ingredient		ITEM_SWEET_DOUGH	1
-	ingredient_list		sweet dough
+	ingredient_list	sweet dough
 	extra_returns		ITEM_MIXING_BOWL	1
 }
 
@@ -768,7 +768,7 @@ recipe 42
 {
 	menu_name			apple fritters
 	show_in_cookbook	3
-	product_objtype		0xc932
+	product_objtype	0xc932
 	product_amount		1
 	product_name
 	product_graphic
@@ -777,7 +777,7 @@ recipe 42
 	cooking_method		2
 	ingredient		ITEM_SWEET_DOUGH	1
 	ingredient		ITEM_APPLE		1
-	ingredient_list		sweet dough and an apple
+	ingredient_list	sweet dough and an apple
 	extra_returns		ITEM_MIXING_BOWL	1
 }
 
@@ -786,7 +786,7 @@ recipe 43
 {
 	menu_name			lemon tarts
 	show_in_cookbook	3
-	product_objtype		0xc933
+	product_objtype	0xc933
 	product_amount		1
 	product_name
 	product_graphic
@@ -795,7 +795,7 @@ recipe 43
 	cooking_method		2
 	ingredient		ITEM_SWEET_DOUGH	1
 	ingredient		ITEM_LEMON		1
-	ingredient_list		sweet dough and a lemon
+	ingredient_list	sweet dough and a lemon
 	extra_returns		ITEM_MIXING_BOWL	1
 }
 
@@ -804,7 +804,7 @@ recipe 44
 {
 	menu_name			cake
 	show_in_cookbook	3
-	product_objtype		0x09e9
+	product_objtype	0x09e9
 	product_amount		1
 	product_name
 	product_graphic
@@ -812,7 +812,7 @@ recipe 44
 	skill			50
 	cooking_method		2
 	ingredient		ITEM_CAKE_BATTER	1
-	ingredient_list		cake batter
+	ingredient_list	cake batter
 	extra_returns		ITEM_MIXING_BOWL	1
 }
 
@@ -821,7 +821,7 @@ recipe 45
 {
 	menu_name			carrot cake
 	show_in_cookbook	3
-	product_objtype		0xc930
+	product_objtype	0xc930
 	product_amount		1
 	product_name
 	product_graphic
@@ -1123,7 +1123,7 @@ recipe 61
 	show_in_cookbook	2
 	product_objtype	0x099F
 	product_amount		1
-	product_name		a bottle of ale
+	product_name		a bottle of <renamable> (ale)
 	product_graphic
 	product_color
 	skill			70
@@ -1145,7 +1145,7 @@ recipe 62
 	show_in_cookbook	0
 	product_objtype	0x1f96
 	product_amount		1
-	product_name		a pitcher of ale
+	product_name		a pitcher of <renamable> (ale)
 	product_graphic
 	product_color
 	skill			70
@@ -1188,7 +1188,7 @@ recipe 64
 	show_in_cookbook	0
 	product_objtype	0x1f98
 	product_amount		1
-	product_name		a pitcher of cider
+	product_name		a pitcher of <renamable> (cider)
 	product_graphic
 	product_color
 	skill			80
@@ -1209,7 +1209,7 @@ recipe 65
 	show_in_cookbook	2
 	product_objtype	0x09C7
 	product_amount		1
-	product_name		a bottle of wine
+	product_name		a bottle of <renamable> (wine)
 	product_graphic
 	product_color
 	skill			90
@@ -1230,7 +1230,7 @@ recipe 66
 	show_in_cookbook	0
 	product_objtype	0x1f9c
 	product_amount		1
-	product_name		a pitcher of wine
+	product_name		a pitcher of <renamable> (wine)
 	product_graphic
 	product_color
 	skill			90
@@ -1251,7 +1251,7 @@ recipe 67
 	show_in_cookbook	2
 	product_objtype	0x099B
 	product_amount		1
-	product_name		a bottle of liquor
+	product_name		a bottle of <renamable> (liquor)
 	product_graphic
 	product_color
 	skill			100
@@ -1271,7 +1271,7 @@ recipe 68
 	show_in_cookbook	0
 	product_objtype	0x1f9a
 	product_amount		1
-	product_name		a pitcher of liquor
+	product_name		a pitcher of <renamable> (liquor)
 	product_graphic
 	product_color
 	skill			100
@@ -1292,7 +1292,7 @@ recipe 69
 	show_in_cookbook	2
 	product_objtype	0xC960
 	product_amount		1
-	product_name		a bottle of melon liquor
+	product_name		a bottle of <renamable> (melon liquor)
 	product_graphic
 	product_color
 	skill			97
@@ -1312,7 +1312,7 @@ recipe 70
 	show_in_cookbook	2
 	product_objtype	0xC961
 	product_amount		1
-	product_name		a bottle of peach liquor
+	product_name		a bottle of <renamable> (peach liquor)
 	product_graphic
 	product_color
 	skill			97
@@ -1332,7 +1332,7 @@ recipe 71
 	show_in_cookbook	2
 	product_objtype	0xC962
 	product_amount		1
-	product_name		a bottle of brandy
+	product_name		a bottle of <renamable> (brandy)
 	product_graphic
 	product_color
 	skill			110
@@ -1352,7 +1352,7 @@ recipe 72
 	show_in_cookbook	2
 	product_objtype	0xC963
 	product_amount		1
-	product_name		a jug of eggnog
+	product_name		a jug of <renamable> (eggnog)
 	product_graphic
 	product_color
 	skill			60
@@ -1375,7 +1375,7 @@ recipe 73
 	show_in_cookbook	2
 	product_objtype	0xC964
 	product_amount		1
-	product_name		a jug of mead
+	product_name		a jug of <renamable> (mead)
 	product_graphic
 	product_color
 	skill			94
@@ -1415,7 +1415,7 @@ recipe 75
 	show_in_cookbook	2
 	product_objtype	0xC965
 	product_amount		1
-	product_name		a bottle of vodka
+	product_name		a bottle of <renamable> (vodka)
 	product_graphic
 	product_color
 	skill			94
@@ -1458,7 +1458,7 @@ recipe 77
 	show_in_cookbook	2
 	product_objtype	0xc966
 	product_amount		1
-	product_name		a pitcher of orange juice
+	product_name		a pitcher of <renamable> (orange juice)
 	product_graphic
 	product_color
 	skill			60
@@ -1567,4 +1567,21 @@ recipe 82
 	ingredient		ITEM_GENERAL_WATER	4
 	ingredient_list	4 flour and water
 	extra_returns
+}
+
+//4 cake batter->giant cake
+recipe 83
+{
+	menu_name			giant cake
+	show_in_cookbook	3
+	product_objtype	0x28aa
+	product_amount		1
+	product_name		cake: <longrenamable>
+	product_graphic
+	product_color		<selected>
+	skill			90
+	cooking_method		0
+	ingredient		ITEM_CAKE_BATTER	4
+	ingredient_list	4 cake batters
+	extra_returns		ITEM_MIXING_BOWL	4
 }
