--- a/trunk/099/pkg/skills/craftingskills/cooking/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/cooking/itemdesc.cfg
@@ -1,4 +1,3 @@
-//Ovens
 Item 0x2DDB
 {
 	Name		elvenoven
@@ -945,6 +944,24 @@ Item 0x29ce
 {
 	Name			gingerbreadman
 	Desc			gingerbread m%en/an%
+	Script		eat
+	Weight		1/2
+	nutrition		6
+}
+
+Item 0x28aa
+{
+	Name			giantcake
+	Desc			giant cake
+	Script		eat
+	Weight		3
+	nutrition		10
+}
+
+Item 0x28ab
+{
+	Name			giantcakeslice
+	Desc			a slice of cake
 	Script		eat
 	Weight		1/2
 	nutrition		6
