--- a/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -1,119 +1,119 @@
 tailoring 0x1EFD
 {
 	Name		fancy shirt
-	material	2
+	material	8
 	skill	60
 }
 
 tailoring 0x1EFF
 {
 	Name		fancy dress
-	material	2
+	material	12
 	skill	80
 }
 
 tailoring 0x1F01
 {
 	Name		plain dress
-	material	2
+	material	10
 	skill	75
 }
 
 tailoring 0x1F03
 {
 	Name		robe
-	material	3
+	material	16
 	skill	85
 }
 
 tailoring 0x1F7B
 {
 	Name		doublet
-	material	2
+	material	8
 	skill	55
 }
 
 tailoring 0x1F9F
 {
 	Name		jester suit
-	material	2
+	material	14
 	skill	85
 }
 
 tailoring 0x1FA1
 {
 	Name		tunic
-	material	2
+	material	12
 	skill	75
 }
 
 tailoring 0x1FFD
 {
 	Name		surcoat
-	material	2
+	material	10
 	skill	70
 }
 
 tailoring 0x1517
 {
 	Name		shirt
-	material	2
+	material	8
 	skill	55
 }
 
 tailoring 0x1515
 {
 	Name		cloak
-	material	3
+	material	14
 	skill	80
 }
 
 tailoring 0x1516
 {
 	Name		skirt
-	material	2
+	material	10
 	skill	65
 }
 
 tailoring 0x152E
 {
 	Name		short pants
-	material	1
+	material	6
 	skill	45
 }
 
 tailoring 0x1537
 {
 	Name		kilt
-	material	2
+	material	8
 	skill	65
 }
 
 tailoring 0x1539
 {
 	Name		long pants
-	material	2
+	material	8
 	skill	60
 }
 
 tailoring 0x153a
 {
 	Name		long pants
-	material	2
+	material	8
 	skill	60
 }
 
 tailoring 0x153B
 {
 	Name		half apron
-	material	1
+	material	6
 	skill	50
 }
 
 tailoring 0x153D
 {
 	Name		full apron
-	material	2
+	material	10
 	skill	70
 }
 
@@ -197,14 +197,14 @@ tailoring 0x171C
 tailoring 0x1718
 {
 	Name		wizard's hat
-	material	2
+	material	7
 	skill	50
 }
 
 tailoring 0xB017
 {
 	Name		Curtain deed
-	material	8
+	material	50
 	skill	100
 	stackable	1
 }
@@ -212,6 +212,7 @@ tailoring 0xB017
 tailoring 0xB00D
 {
 	Name		Banner Deed
-	material	8
+	material	50
 	skill	100
+	stackable	1
 }
