--- a/trunk/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -1,35 +1,54 @@
-Item clothmenu
+Keymenu clothmenu
 {
-	Submenu	0x1517	shirts	shirts menu
-	Submenu	0x1539	pants	pants menu
-	Submenu	0x1713	caps		caps menu
-	Submenu	0x153D	misccloth	misc. menu
+	Submenu	0x1517	shirts		Shirts
+	Submenu	0x1539	pants		Pants
+	Submenu	0x1517	dresses		Dresses
+	Submenu	0x1539	misc_clothing	Other Clothing
+	Submenu	0x1713	hats1		Hats
+	Submenu	0x1713	hats2		More Hats
+	Submenu	0x153D	other_cloth	Misc.
 }
 
-Item shirts
+Submenu shirts
 {
+	show_upgrade_options	0
 	Entry	0x1517	Shirt
 	Entry	0x1EFD	Fancy Shirt
 	Entry	0x1FFD	Surcoat
-	Entry	0x1F01	Plain Dress
-	Entry	0x1EFF	Fancy Dress
 	Entry	0x1FA1	Tunic
 	Entry	0x1F7B	Doublet
-	Entry	0x1515	Cloak
 	Entry	0x1F9F	Jester's Suit
-	Entry	0x1F03	Robe
 }
 
-Item pants
+Submenu pants
 {
+	show_upgrade_options	0
 	Entry	0x152E	Short pants
 	Entry	0x1539	Fancy pants
 	Entry	0x1537	Kilt
+}
+
+Submenu dresses
+{
+	show_upgrade_options	0
+	Entry	0x1F01	Plain Dress
+	Entry	0x1EFF	Fancy Dress
 	Entry	0x1516	Skirt
 }
 
-Item caps
+Submenu misc_clothing
 {
+	show_upgrade_options	0
+	Entry	0x1F03	Robe
+	Entry	0x1515	Cloak
+	Entry	0x153B	Half Apron
+	Entry	0x153D	Full Apron
+	Entry	0x1541	Body Sash
+}
+
+Submenu hats1
+{
+	show_upgrade_options	0
 	Entry	0x153F	Bandana
 	Entry	0x1543	Skullcap
 	Entry	0x1715	Cap
@@ -38,31 +57,38 @@ Item caps
 	Entry	0x1713	Floppy Hat
 	Entry	0x1717	Straw Hat
 	Entry	0x1714	Wide_Brim Hat
+}
+
+Submenu hats2
+{
+	show_upgrade_options	0
 	Entry	0x171B	Tricorne Hat
 	Entry	0x171C	Jester hat
 	Entry	0x1718	Wizard's hat
 }
 
-Item misccloth
+Submenu other_cloth
 {
-	Entry	0x1541	Body Sash
-	Entry	0x153B	Half Apron
-	Entry	0x153D	Full Apron
+	show_upgrade_options	0
 	Entry	0xB017	Curtain deed
 	Entry	0xB00D	Banner Deed
 }
 
+
+
+
 Item leathermenu
 {
-	Submenu	0x13CC	leather	leather menu
-	Submenu	0x13DB	studded	studded menu
-	Submenu	0x1C02	female	female menu
-	Submenu	0x1711	shoes	shoes menu
-	Submenu	0x0E76	miscleather	misc. menu
+	Submenu	0x13CC	leather_armor		Leather Armor
+	Submenu	0x13DB	studded_armor		Studded Armor
+	Submenu	0x1C02	female_armor		Other Armor
+	Submenu	0x1711	shoes			Shoes
+	Submenu	0x0E76	other_leather		Misc.
 }
 
-Item leather
+Item leather_armor
 {
+	show_upgrade_options	1
 	Entry	0x1DB9	Leather Cap
 	Entry	0x13C7	Leather Gorget
 	Entry	0x13C6	Leather Gloves
@@ -71,8 +97,9 @@ Item leather
 	Entry	0x13CC	Leather Tunic
 }
 
-Item studded
+Item studded_armor
 {
+	show_upgrade_options	1
 	Entry	0x708b	Studded Cap
 	Entry	0x13D6	Studded Gorget
 	Entry	0x13D5	Studded Gloves
@@ -81,8 +108,9 @@ Item studded
 	Entry	0x13DB	Studded Tunic
 }
 
-Item female
+Item female_armor
 {
+	show_upgrade_options	1
 	Entry	0x1C0A	Leather Bustier
 	Entry	0x1C0C	Studded Bustier
 	Entry	0x1C00	Leather Shorts
@@ -93,14 +121,16 @@ Item female
 
 Item shoes
 {
+	show_upgrade_options	0
 	Entry	0x170D	Sandals
 	Entry	0x170F	Shoes
 	Entry	0x170B	Leather Boots
 	Entry	0x1711	Thigh Boots
 }
 
-Item miscleather
+Item other_leather
 {
+	show_upgrade_options	0
 	Entry	0x0E76	Bag
 	Entry	0x0E79	Pouch
 	Entry	0x0E75	Backpack
