--- a/trunk/099/pkg/skills/rogueskills/poisoning/poisoning_items.cfg
+++ b/trunk/099/pkg/skills/rogueskills/poisoning/poisoning_items.cfg
@@ -1,194 +1,10 @@
-Weapon 0x0F60
-{
-	Name		Longsword
-}
+///////////////////
+//  Any items that can be poisoned should be added here.
+//  The format should be:
+//
+//  Item (objtype)
+//  {
+//     Name	(name)
+//  }
+///////////////////
 
-Weapon 0x13AF
-{
-	Name		WarAxe
-}
-
-Weapon 0x0f49
-{
-	Name		Axe
-}
-
-Weapon 0x0f47
-{
-	Name		BattleAxe
-}
-
-Weapon 0x0f4b
-{
-	Name		DoubleAxe
-}
- 
-Weapon 0x0f45
-{
-	Name		ExecutionersAxe
-}
-
-Weapon 0x13fa
-{
-	Name		LargeBattleAxe
-}
-
-Weapon 0x1442
-{
-	Name		TwoHandedAxe
-}
- 
-Weapon 0x143c
-{
-	Name		HammerPick
-}
-
-Weapon 0x0f5c
-{
-	Name		Mace
-}
-
-Weapon 0x143a
-{
-	Name		Maul
-}
-
-Weapon 0x1438
-{
-	Name		WarHammer
-}
-
-Weapon 0x1406
-{
-	Name		WarMace
-}
-
-Weapon 0x0f4e
-{
-	Name		Bardiche
-}
-
-
-Weapon 0x143e
-{
-	Name		Halberd
-}
-
-Weapon 0x1402
-{
-	Name		ShortSpear
-}
-
-Weapon 0x0f63
-{
-	Name		Spear
-}
-
-Weapon 0x1404
-{
-	Name		WarFork
-}
-
-Weapon 0x0f5e
-{
-	Name		BroadSword
-}
-
-Weapon 0x1440
-{
-	Name		Cutlass
-}
-
-Weapon 0x0f51
-{
-	Name		Dagger
-}
-
-Weapon 0x13fe
-{
-	Name		Katana
-}
-
-Weapon 0x1401
-{
-	Name		Kryss
-}
-
-Weapon 0x13b5
-{
-	Name		Scimitar
-}
-
-Weapon 0x13b9
-{
-	Name		VikingSword
-}
-
-Weapon 0x0f43
-{
-	Name		Hatchet
-}
-
-Weapon 0x0e85
-{
-	Name		Pickaxe
-}
-
-Weapon 0x13f6
-{
-	Name		ButcherKnife
-}
-
-Weapon 0x0ec2
-{
-	Name		Cleaver
-}
-
-Weapon 0x0ec4
-{
-	Name		SkinningKnife
-}
-
-Weapon 0x13b3
-{
-	Name		Club
-}
-
-Weapon 0x0e87
-{
-	Name		Pitchfork
-}
-
-Weapon 0x0df0
-{
-	Name		BlackStaff
-}
-
-Weapon 0x13f9
-{
-	Name		GnarledStaff
-}
-
-Weapon 0x0e8a
-{
-	Name		Quarterstaff
-}
-
-Weapon 0x0e81
-{
-	Name		ShepherdsCrook
-}
-
-Weapon 0xcdb9
-{
-	Name		VikingSwordofWrath
-}
-Weapon 0X0FB4
-{
-	Name		sledgehammer
-}
-
-Weapon 0x13b7
-{
-	Name		Rapier
-}
